--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
@@ -44,10 +45,12 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-charts": "^1.4.47",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "tailwindcss": "^3.4.15"
