--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@dynamic-labs/client": "^4.0.0-alpha.32",
     "@dynamic-labs/react-native-extension": "^4.0.0-alpha.32",
     "@ethersproject/shims": "^5.7.0",
+    "@ethsign/sp-sdk": "^0.7.8",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/space-grotesk": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
@@ -33,6 +34,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
