--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/space-grotesk": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.5",
     "@privy-io/expo": "^0.33.1",
     "@privy-io/expo-native-extensions": "^0.0.3",
     "@react-navigation/native": "^6.0.2",
@@ -55,7 +56,8 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "viem": "^2.21.45"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
