--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@privy-io/expo": "^0.33.1",
     "@privy-io/expo-native-extensions": "^0.0.3",
     "@react-navigation/native": "^6.0.2",
+    "ethers": "^5",
     "expo": "~51.0.28",
     "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
@@ -55,7 +56,8 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "viem": "^2.21.45"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -65,7 +67,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.5.3"
   },
   "private": true
 }
