--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@biconomy/sdk": "^0.0.10",
+    "@biconomy/sdk": "^0.0.7",
     "@dynamic-labs/client": "^4.0.0-alpha.32",
     "@dynamic-labs/react-native-extension": "^4.0.0-alpha.32",
     "@ethersproject/shims": "^5.7.0",
@@ -61,7 +61,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "tailwindcss": "^3.4.15",
-    "viem": "^2.21.45"
+    "viem": "2.21.36"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
