--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-charts": "^1.4.47",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
